fixed vertical alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,20 +10,30 @@ body {
     margin: 0;
     padding: 0;
 }
+
 p {
     margin: 0;
 }
 
 
+.container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .main-section {
     position: relative;
-    top: 50px;
     background: white;
     height: 560px;
     width: 360px;
     margin: 0 auto;
     border-radius: 1.4em;
     box-shadow: 3px 3px 25px #adb0b8;
+
+
 
     img {
         width: 330px;
